--- a/informacoes.html
+++ b/informacoes.html
@@ -367,7 +367,7 @@
         <span>Curso</span>
         <span>15/06/2012 até 18/08/2020</span>
       </div>
-      <p class="professional_info-desciption">
+      <p class="professional_info-desciption information-text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
         ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -387,7 +387,7 @@
         <span><strong>Empresa:</strong>Sua empresa</span>
         <span><strong>15/06/2012</strong> até <strong>18/08/2020</strong></span>
       </div>
-      <p class="professional_info-desciption">
+      <p class="professional_info-desciption information-text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
         ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -404,7 +404,7 @@
         <span><strong>Empresa:</strong>Sua empresa</span>
         <span><strong>15/06/2012</strong> até <strong>18/08/2020</strong></span>
       </div>
-      <p class="professional_info-desciption history_info-desciption">
+      <p class="professional_info-desciption history_info-desciption information-text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
         ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -417,14 +417,12 @@
     <section class="certifications">
       <div class="professional_icon">
         <h2 class="professional_icon-title">
-          <span class="professional_icon-title">
-            <img class="certifications-icon" src="assets/img/certificacoes.svg" alt="">
-            Certificações e ferramentas
-          </span>
+          <img class="certifications_professional_icon-image" src="assets/img/certificacoes.svg" alt="">
+          Certificações e ferramentas
         </h2>
       </div>
       <div>
-        <p class="professional_info-desciption">
+        <p class="professional_info-desciption information-text">
           Adobe Camera Raw; Adobe Illustrator; Adobe InDesign;Adobe Lightroom; Adobe Photoshop; Adobe Premiere;Adobe XD;
           Design Sprint; Figma; Marvel App; Pacote Office; Sketch
         </p>
