--- a/habilidades-tecnicas.html
+++ b/habilidades-tecnicas.html
@@ -9,340 +9,340 @@
   <title>Resumo profissional</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+  <linkdiv
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700"
     rel="stylesheet">
-  <!-- Reset  -->
-  <style>
-    html {
-      line-height: 1.15;
-      /* 1 */
-      -webkit-text-size-adjust: 100%;
-      /* 2 */
-    }
+    <!-- Reset  -->
+    <style>
+      html {
+        line-height: 1.15;
+        /* 1 */
+        -webkit-text-size-adjust: 100%;
+        /* 2 */
+      }
 
-    body {
-      margin: 0;
-    }
+      body {
+        margin: 0;
+      }
 
-    main {
-      display: block;
-    }
+      main {
+        display: block;
+      }
 
-    h1 {
-      font-size: 2em;
-      margin: 0.67em 0;
-    }
+      h1 {
+        font-size: 2em;
+        margin: 0.67em 0;
+      }
 
-    hr {
-      box-sizing: content-box;
-      /* 1 */
-      height: 0;
-      /* 1 */
-      overflow: visible;
-      /* 2 */
-    }
+      hr {
+        box-sizing: content-box;
+        /* 1 */
+        height: 0;
+        /* 1 */
+        overflow: visible;
+        /* 2 */
+      }
 
-    pre {
-      font-family: monospace, monospace;
-      /* 1 */
-      font-size: 1em;
-      /* 2 */
-    }
+      pre {
+        font-family: monospace, monospace;
+        /* 1 */
+        font-size: 1em;
+        /* 2 */
+      }
 
-    a {
-      background-color: transparent;
-    }
+      a {
+        background-color: transparent;
+      }
 
-    abbr[title] {
-      border-bottom: none;
-      /* 1 */
-      text-decoration: underline;
-      /* 2 */
-      text-decoration: underline dotted;
-      /* 2 */
-    }
+      abbr[title] {
+        border-bottom: none;
+        /* 1 */
+        text-decoration: underline;
+        /* 2 */
+        text-decoration: underline dotted;
+        /* 2 */
+      }
 
-    b,
-    strong {
-      font-weight: bolder;
-    }
+      b,
+      strong {
+        font-weight: bolder;
+      }
 
-    code,
-    kbd,
-    samp {
-      font-family: monospace, monospace;
-      /* 1 */
-      font-size: 1em;
-      /* 2 */
-    }
+      code,
+      kbd,
+      samp {
+        font-family: monospace, monospace;
+        /* 1 */
+        font-size: 1em;
+        /* 2 */
+      }
 
-    small {
-      font-size: 80%;
-    }
+      small {
+        font-size: 80%;
+      }
 
-    sub,
-    sup {
-      font-size: 75%;
-      line-height: 0;
-      position: relative;
-      vertical-align: baseline;
-    }
+      sub,
+      sup {
+        font-size: 75%;
+        line-height: 0;
+        position: relative;
+        vertical-align: baseline;
+      }
 
-    sub {
-      bottom: -0.25em;
-    }
+      sub {
+        bottom: -0.25em;
+      }
 
-    sup {
-      top: -0.5em;
-    }
+      sup {
+        top: -0.5em;
+      }
 
-    img {
-      border-style: none;
-    }
+      img {
+        border-style: none;
+      }
 
-    button,
-    input,
-    optgroup,
-    select,
-    textarea {
-      font-family: inherit;
-      /* 1 */
-      font-size: 100%;
-      /* 1 */
-      line-height: 1.15;
-      /* 1 */
-      margin: 0;
-      /* 2 */
-    }
+      button,
+      input,
+      optgroup,
+      select,
+      textarea {
+        font-family: inherit;
+        /* 1 */
+        font-size: 100%;
+        /* 1 */
+        line-height: 1.15;
+        /* 1 */
+        margin: 0;
+        /* 2 */
+      }
 
-    button,
-    input {
-      /* 1 */
-      overflow: visible;
-    }
+      button,
+      input {
+        /* 1 */
+        overflow: visible;
+      }
 
-    button,
-    select {
-      /* 1 */
-      text-transform: none;
-    }
+      button,
+      select {
+        /* 1 */
+        text-transform: none;
+      }
 
-    button,
-    [type="button"],
-    [type="reset"],
-    [type="submit"] {
-      -webkit-appearance: button;
-    }
+      button,
+      [type="button"],
+      [type="reset"],
+      [type="submit"] {
+        -webkit-appearance: button;
+      }
 
-    button::-moz-focus-inner,
-    [type="button"]::-moz-focus-inner,
-    [type="reset"]::-moz-focus-inner,
-    [type="submit"]::-moz-focus-inner {
-      border-style: none;
-      padding: 0;
-    }
+      button::-moz-focus-inner,
+      [type="button"]::-moz-focus-inner,
+      [type="reset"]::-moz-focus-inner,
+      [type="submit"]::-moz-focus-inner {
+        border-style: none;
+        padding: 0;
+      }
 
-    fieldset {
-      padding: 0.35em 0.75em 0.625em;
-    }
+      fieldset {
+        padding: 0.35em 0.75em 0.625em;
+      }
 
-    legend {
-      box-sizing: border-box;
-      /* 1 */
-      color: inherit;
-      /* 2 */
-      display: table;
-      /* 1 */
-      max-width: 100%;
-      /* 1 */
-      padding: 0;
-      /* 3 */
-      white-space: normal;
-      /* 1 */
-    }
+      legend {
+        box-sizing: border-box;
+        /* 1 */
+        color: inherit;
+        /* 2 */
+        display: table;
+        /* 1 */
+        max-width: 100%;
+        /* 1 */
+        padding: 0;
+        /* 3 */
+        white-space: normal;
+        /* 1 */
+      }
 
-    progress {
-      vertical-align: baseline;
-    }
+      progress {
+        vertical-align: baseline;
+      }
 
-    textarea {
-      overflow: auto;
-    }
+      textarea {
+        overflow: auto;
+      }
 
-    [type="checkbox"],
-    [type="radio"] {
-      box-sizing: border-box;
-      /* 1 */
-      padding: 0;
-      /* 2 */
-    }
+      [type="checkbox"],
+      [type="radio"] {
+        box-sizing: border-box;
+        /* 1 */
+        padding: 0;
+        /* 2 */
+      }
 
-    [type="number"]::-webkit-inner-spin-button,
-    [type="number"]::-webkit-outer-spin-button {
-      height: auto;
-    }
+      [type="number"]::-webkit-inner-spin-button,
+      [type="number"]::-webkit-outer-spin-button {
+        height: auto;
+      }
 
-    [type="search"]::-webkit-search-decoration {
-      -webkit-appearance: none;
-    }
+      [type="search"]::-webkit-search-decoration {
+        -webkit-appearance: none;
+      }
 
-    ::-webkit-file-upload-button {
-      -webkit-appearance: button;
-      /* 1 */
-      font: inherit;
-      /* 2 */
-    }
+      ::-webkit-file-upload-button {
+        -webkit-appearance: button;
+        /* 1 */
+        font: inherit;
+        /* 2 */
+      }
 
-    details {
-      display: block;
-    }
+      details {
+        display: block;
+      }
 
-    summary {
-      display: list-item;
-    }
+      summary {
+        display: list-item;
+      }
 
-    template {
-      display: none;
-    }
+      template {
+        display: none;
+      }
 
-    [hidden] {
-      display: none;
-    }
+      [hidden] {
+        display: none;
+      }
 
-    @page {
-      margin: 0;
-      padding: 0;
-    }
+      @page {
+        margin: 0;
+        padding: 0;
+      }
 
-    html,
-    body,
-    div,
-    span,
-    applet,
-    object,
-    iframe,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
-    blockquote,
-    pre,
-    a,
-    abbr,
-    acronym,
-    address,
-    big,
-    cite,
-    code,
-    del,
-    dfn,
-    em,
-    img,
-    ins,
-    kbd,
-    q,
-    s,
-    samp,
-    small,
-    strike,
-    strong,
-    sub,
-    sup,
-    tt,
-    var,
-    b,
-    u,
-    i,
-    center,
-    dl,
-    dt,
-    dd,
-    ol,
-    ul,
-    li,
-    fieldset,
-    form,
-    label,
-    legend,
-    table,
-    caption,
-    tbody,
-    tfoot,
-    thead,
-    tr,
-    th,
-    td,
-    article,
-    aside,
-    canvas,
-    details,
-    embed,
-    figure,
-    figcaption,
-    footer,
-    header,
-    hgroup,
-    menu,
-    nav,
-    output,
-    ruby,
-    section,
-    summary,
-    time,
-    mark,
-    audio,
-    video {
-      margin: 0;
-      padding: 0;
-      border: 0;
-      font-size: 100%;
-      font: inherit;
-      vertical-align: baseline;
-    }
+      html,
+      body,
+      div,
+      span,
+      applet,
+      object,
+      iframe,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      p,
+      blockquote,
+      pre,
+      a,
+      abbr,
+      acronym,
+      address,
+      big,
+      cite,
+      code,
+      del,
+      dfn,
+      em,
+      img,
+      ins,
+      kbd,
+      q,
+      s,
+      samp,
+      small,
+      strike,
+      strong,
+      sub,
+      sup,
+      tt,
+      var,
+      b,
+      u,
+      i,
+      center,
+      dl,
+      dt,
+      dd,
+      ol,
+      ul,
+      li,
+      fieldset,
+      form,
+      label,
+      legend,
+      table,
+      caption,
+      tbody,
+      tfoot,
+      thead,
+      tr,
+      th,
+      td,
+      article,
+      aside,
+      canvas,
+      details,
+      embed,
+      figure,
+      figcaption,
+      footer,
+      header,
+      hgroup,
+      menu,
+      nav,
+      output,
+      ruby,
+      section,
+      summary,
+      time,
+      mark,
+      audio,
+      video {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        font-size: 100%;
+        font: inherit;
+        vertical-align: baseline;
+      }
 
-    article,
-    aside,
-    details,
-    figcaption,
-    figure,
-    footer,
-    header,
-    hgroup,
-    menu,
-    nav,
-    section {
-      display: block;
-    }
+      article,
+      aside,
+      details,
+      figcaption,
+      figure,
+      footer,
+      header,
+      hgroup,
+      menu,
+      nav,
+      section {
+        display: block;
+      }
 
-    body {
-      line-height: 1;
-    }
+      body {
+        line-height: 1;
+      }
 
-    ol,
-    ul {
-      list-style: none;
-    }
+      ol,
+      ul {
+        list-style: none;
+      }
 
-    blockquote:before,
-    blockquote:after,
-    q:before,
-    q:after {
-      content: '';
-      content: none;
-    }
+      blockquote:before,
+      blockquote:after,
+      q:before,
+      q:after {
+        content: '';
+        content: none;
+      }
 
-    table {
-      border-collapse: collapse;
-      border-spacing: 0;
-    }
-  </style>
+      table {
+        border-collapse: collapse;
+        border-spacing: 0;
+      }
+    </style>
 
-  <!-- Style -->
-  <link rel="stylesheet" href="style.css">
+    <!-- Style -->
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
